--- a/data/build.gradle
+++ b/data/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     // room
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.room:room-rxjava2:2.3.0'
+    implementation project(path: ':domain')
     kapt 'androidx.room:room-compiler:2.3.0'
     // retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
