--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -13,4 +13,7 @@ dependencies {
 
     //rxjava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    //rxAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
 }
