--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "31.0.0"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.example.stats"
@@ -49,13 +49,25 @@ dependencies {
     // retrofit
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //RxDogtag
+    implementation("com.uber.rxdogtag2:rxdogtag:2.0.1")
+    implementation 'me.relex:circleindicator:2.1.4'
+
+    // OkHttp3
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.0.1'
 
     // rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
 
     // room
     implementation "androidx.room:room-runtime:2.3.0"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
 
