--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -78,4 +78,7 @@ dependencies {
 
     // lifecycle
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+
+    implementation 'com.google.android.material:material:1.4.0'
+
 }
