--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -68,6 +68,8 @@ dependencies {
     // room
     implementation "androidx.room:room-runtime:2.3.0"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
 
