--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -51,15 +51,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //RxDogtag
-    implementation("com.uber.rxdogtag2:rxdogtag:2.0.1")
-    implementation 'me.relex:circleindicator:2.1.4'
-
-    // OkHttp3
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.1'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.0.1'
-
     // rxjava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
@@ -82,5 +73,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
     implementation 'com.google.android.material:material:1.4.0'
+
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
 
 }
