--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -74,6 +74,11 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.4.0'
 
+// OkHttp3
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:5.0.0-alpha.2'
+
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
