--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -73,6 +73,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 
     implementation 'com.google.android.material:material:1.4.0'
+    //RxDogtag
+    implementation("com.uber.rxdogtag2:rxdogtag:2.0.1")
+    implementation 'me.relex:circleindicator:2.1.4'
+
 
 // OkHttp3
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
