⚰️:: delete data class

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
+            android:name=".ui.TeamGameListActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.GameStatsDetailActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.StatsActivity"
             android:exported="true" />
         <activity android:name=".ui.PlayerDetailActivity" />
