--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -3,15 +3,17 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
+apply plugin: 'dagger.hilt.android.plugin'
+
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.stats"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -56,14 +58,6 @@ dependencies {
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
 
-    // koin
-    implementation "org.koin:koin-androidx-scope:2.2.2"
-    implementation "org.koin:koin-androidx-viewmodel:2.2.2"
-    implementation "org.koin:koin-androidx-ext:2.2.2"
-
-    // lifecycle
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
-
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -73,13 +67,26 @@ dependencies {
     implementation("com.uber.rxdogtag2:rxdogtag:2.0.1")
     implementation 'me.relex:circleindicator:2.1.4'
 
+    // lifecycle
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
 
-// OkHttp3
+
+    //Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.38.1"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    // OkHttp3
     implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:5.0.0-alpha.2'
 
+    // CalenderView
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+
+    // LocalTime
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
 }
