🐛:: change data class name

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -89,4 +89,9 @@ dependencies {
     // LocalTime
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
+    //room
+    implementation 'androidx.room:room-runtime:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+
+
 }
