--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,5 +24,7 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Create google-services.json
+      run: echo '${{ secrets.GOOGLE_SERVICES_JSON }}' > ./presentation/src/google-services.json
     - name: Print Hello World
       run: echo "Hello World"
