--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 
     // room
     implementation "androidx.room:room-runtime:2.3.0"
+    implementation 'androidx.test:monitor:1.4.0'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
+    testImplementation 'junit:junit:4.12'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
 
